--- a/css/main.css
+++ b/css/main.css
@@ -1,46 +1,53 @@
-
 #pwstrength {
-    height: 10px;
-    width: 100px;
-    border: 1px solid black;
+  height: auto;
+  border: 3px solid rgb(94, 73, 73);
+  border-radius: 4px;
+  padding: 12px;
+  margin-bottom: 10px;
+  color: rgb(56, 53, 53);
+  text-align: center;
+  font-size: 12px;
+  box-sizing: border-box;
+  font-weight: bold;
+  content: center;
 }
 
 input {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-  }
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.container {
+  background-color: #f1f1f1;
+  padding: 20px;
+}
   
-  input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-  }
-  
-  .container {
-    background-color: #f1f1f1;
-    padding: 20px;
-  }
-  
-  .valid {
+.valid {
     color: green;
-  }
+}
   
-  .valid:before {
+.valid:before {
     position: relative;
     left: -35px;
     content: "✔";
-  }
+}
   
   .invalid {
     color: red;
-  }
+}
   
-  .invalid:before {
+.invalid:before {
     position: relative;
     left: -35px;
     content: "✖";
-  }
+}
