--- a/css/main.css
+++ b/css/main.css
@@ -1,46 +1,71 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 #pwstrength {
-    height: 10px;
-    width: 100px;
-    border: 1px solid black;
+  height: 15px;
+  width: 200px;
+  border: 1px solid black;
+  margin-bottom: 10px;
+  display: none;
+}
+
+.tooltip {
+  display: none;
+  color: red;
+  position: relative;
 }
 
 input {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-  }
-  
-  input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-  }
-  
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+
+button{
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
   .container {
     background-color: #f1f1f1;
     padding: 20px;
   }
-  
-  .valid {
+
+  .valid{
     color: green;
   }
-  
+
   .valid:before {
     position: relative;
-    left: -35px;
     content: "✔";
   }
-  
-  .invalid {
+  .good{
+    background-color: green;
+  }
+
+  .moderate {
+    background-color: yellow;
+  }
+  .bad{
+    background-color: red;
+  }
+
+  .invalid{
     color: red;
   }
-  
+
   .invalid:before {
     position: relative;
-    left: -35px;
     content: "✖";
   }
